Add unity project with compiler settings

--- a/CCFUBugSample/package.json
+++ b/CCFUBugSample/package.json
@@ -1,4 +1,5 @@
 {
     "name": "com.ccfubugsampe",
-    "displayName": "CCFUBugSample"
+    "displayName": "CCFUBugSample",
+    "version": "1.0.0"
 }
