--- a/CCFUBugSample.UnityProject/Packages/manifest.json
+++ b/CCFUBugSample.UnityProject/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.ccfubugsampe": "file:../../CCFUBugSample",
+    "com.coffee.csharp-compiler-settings": "1.1.0",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
@@ -38,8 +40,7 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.coffee.csharp-compiler-settings": "1.1.0"
+    "com.unity.modules.xr": "1.0.0"
   },
   "scopedRegistries": [
     {
